# raft-rs

./: .rustfmt.toml  Cargo.toml  Makefile  README.md  compliance.md  compliance.toml
.github/workflows/: ci.yml
scripts/: local_test.sh
src/: clock.rs  error.rs  future_util.rs  io.rs  lib.rs  log.rs  macros.rs  main.rs  mode.rs  packet.rs  peer.rs  queue.rs  raft_state.rs  rpc.rs  server.rs  state.rs  state_machine.rs  term_idx.rs  testing.rs  timeout.rs
src/io/: network.rs  rx.rs  server.rs  server_egress.rs  server_ingress.rs  socket.rs  testing.rs  tx.rs
src/log/: entry.rs  idx.rs  term.rs  term_idx.rs
src/mode/: candidate.rs  follower.rs  leader.rs
src/packet/: append_entries.rs  request_vote.rs  rpc.rs
src/peer/: testing.rs
src/queue/: network.rs  server_egress.rs  server_ingress.rs  testing.rs
src/rpc/: append_entries.rs  packet.rs  request_vote.rs
src/server/: id.rs  peer.rs
src/state/: candidate.rs  common.rs  follower.rs  inner.rs  leader.rs  variants.rs
