[package]
name = "raft-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-test = "0.3.30"
tokio = { version = "1.39.1", features = ["rt", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1.39.1", features = ["full"] }

