[package]
name = "raft-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"
rand = "0.8"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures-test = "0.3"

