[package]
name = "raft-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
cfg-if = "1.0.0"
futures = "0.3"
pin-project-lite = "0.2"
rand = "0.8"
s2n-codec = "0.44.0"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
futures-test = "0.3"

